--- a/analysis/Pandas/01. Series.ipynb
+++ b/analysis/Pandas/01. Series.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8bb1eb88-4049-44be-859a-9a52a859a0e7",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7f75a808-406f-4181-8f1d-e0c157a2e9ea",
    "metadata": {},
    "outputs": [
@@ -47,11 +47,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0   -20\n",
-      "1   -10\n",
-      "2    10\n",
-      "3    20\n",
-      "dtype: int64\n"
+      "0    -20\n",
+      "1    -10\n",
+      "2     10\n",
+      "3     20\n",
+      "dtype: object\n"
      ]
     }
    ],
@@ -62,36 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9448d0ac-cc25-4fa7-a99f-ffb8e5a94739",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(temp[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "97efd646-5f44-46ea-a0c2-7f4e1410cab7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(temp[2])"
    ]
@@ -106,25 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "df511696-c151-4f2d-af40-51a1336408b3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Jan   -20\n",
-       "Feb   -10\n",
-       "Mar    10\n",
-       "Apr    20\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "temp = pd.Series([-20, -10, 10, 20], index=['Jan', 'Feb', 'Mar', 'Apr'])\n",
     "temp"
@@ -132,18 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d9efbc4b-12a1-4841-ab27-99c8c419cdf4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(temp['Feb'])"
    ]
@@ -165,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
